public api & fixes & openapi doc
